switched weather dash for unfinished dnd

--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -35,11 +35,11 @@
         "deployedURL": "ep-burger-eater.herokuapp.com/",
         "tech": ["HTML", "CSS", "JavaScript", "jQuery", "Node.js", "MySQL", "Handlebars"]
     }, {
-        "title": "D&D Search",
-        "description": "This is a simple application I created for my D&D party early on in my coding life. Searching Google everytime you have a question about your class/race/weapon/spell gets a little old, so I made an app that puts it all together with an easy navigation system.",
-        "imageURL": "DnDSearch",
-        "gitURL": "https://github.com/eric-purrington/DnD_Search",
-        "deployedURL": "https://eric-purrington.github.io/DnD_Search",
+        "title": "Weather Dashboard",
+        "description": "This is a simple application I created early on in my coding life. The user can search for a city and save that city to their weather dashboard. A five-day forecast and current weather is shown for their selected city.",
+        "imageURL": "WeatherDash",
+        "gitURL": "https://github.com/eric-purrington/Weather-Dashboard",
+        "deployedURL": "https://eric-purrington.github.io/Weather-Dashboard",
         "tech": ["HTML", "CSS", "JavaScript", "jQuery"]
     }
 ]
